parser.output
Terminals unused in grammar

    MINUS
    DIVIDE
    NumberType
    TextType
    VoidType
    SPACE
    JIN
    DOLAR
    UMINUS
    INOUT
    WAITTIME_INPOS
    LESS
    GREATER
    DEVCOLON
    LMOVE
    RETRY
    DEFAULT
    ARCCEND
    LNumber


Grammar

    0 $accept: program "end of file"

    1 program: module_list

    2 module_list: module
    3            | module_list module

    4 module: MODULE Identifier declaration_list ENDMODULE

    5 declaration_list: declaration
    6                 | declaration_list declaration

    7 declaration: variable_declaration
    8            | function_declaration
    9            | var_assignment
   10            | Record_declare

   11 Type: NUM
   12     | BOOL
   13     | STRING
   14     | ROBTARGET
   15     | JOINTTARGET
   16     | WOBJDATA
   17     | ZONEDATA
   18     | SPEEDDATA
   19     | TOOLDATA
   20     | SEAMDATA
   21     | WELDDATA
   22     | Identifier

   23 Record_declare: RECORD Identifier struct_members ENDRECORD

   24 struct_members: var_decl
   25               | struct_members var_decl

   26 var_decl: Type Identifier SEMICOLON

   27 scope_pers: PERS

   28 scope1: TASK PERS
   29       | CONST_L

   30 scope2: VAR

   31 function_declaration: PROC Identifier LC parameter_declaration_list RC function_body ENDPROC
   32                     | FUNC Type Identifier LC parameter_declaration_list RC function_body ENDFUNC

   33 parameter_declaration_list: parameter_declaration
   34                           | parameter_declaration_list COMMA parameter_declaration
   35                           | %empty

   36 parameter_declaration: Type Identifier

   37 func_call_parameter_list: expression
   38                         | func_call_parameter_list COMMA expression

   39 function_body: %empty
   40              | statement_list

   41 statement_list: statement
   42               | statement_list statement

   43 function_call: Identifier SEMICOLON
   44              | Identifier func_call_parameter_list SEMICOLON

   45 inst_modifer: SPLASH CONC
   46             | SPLASH TOOL_P
   47             | SPLASH PLEN
   48             | SPLASH MAXTIME
   49             | SPLASH TIMEFLAG
   50             | SPLASH WOBJ_P
   51             | SPLASH SEAM_NAME
   52             | SPLASH ZONE_P
   53             | SPLASH INPOS
   54             | SPLASH VEL_P
   55             | SPLASH TCP_P
   56             | SPLASH NOEOFFS
   57             | SPLASH ID_P

   58 statement: variable_for_body
   59          | assignment
   60          | if
   61          | while_loop
   62          | for
   63          | return
   64          | function_call
   65          | MOVEJ func_call_parameter_list SEMICOLON
   66          | ACTUNIT func_call_parameter_list SEMICOLON
   67          | ARCLSTART func_call_parameter_list SEMICOLON
   68          | ARCL func_call_parameter_list SEMICOLON
   69          | ARCC func_call_parameter_list SEMICOLON
   70          | ARCEND func_call_parameter_list SEMICOLON
   71          | MOVEL func_call_parameter_list SEMICOLON
   72          | MOVEABSJ func_call_parameter_list SEMICOLON
   73          | DEACTUNIT func_call_parameter_list SEMICOLON
   74          | TPWRITE expression SEMICOLON
   75          | ACCSET expression COMMA expression SEMICOLON
   76          | VELSET expression COMMA expression SEMICOLON
   77          | WAITTIME func_call_parameter_list SEMICOLON
   78          | SETDO Identifier COMMA expression SEMICOLON
   79          | SET Identifier SEMICOLON
   80          | RESET Identifier SEMICOLON
   81          | WAITDI Identifier COMMA expression SEMICOLON
   82          | WAITUNTIL expression SEMICOLON
   83          | PULSEDO func_call_parameter_list SEMICOLON
   84          | switch

   85 return: RETURN SEMICOLON
   86       | RETURN expression SEMICOLON

   87 while_loop: WHILE expression DO function_body ENDWHILE

   88 switch: TEST expression switch_case_list ENDTEST

   89 switch_case_list: switch_case_define
   90                 | switch_case_list switch_case_define

   91 switch_case_define: CASE expression COLON function_body

   92 for: FOR Identifier FROM expression TO expression STEP expression DO function_body ENDFOR

   93 if: IF expression THEN function_body ENDIF
   94   | IF expression statement
   95   | IF expression THEN function_body elseif_statment_list ENDIF

   96 elseif_statment_list: elseif_statment
   97                     | elseif_statment_list elseif_statment

   98 elseif_statment: ELSE function_body
   99                | ELSEIF expression THEN function_body

  100 variable_declaration: scope1 Type var_expression SEMICOLON
  101                     | scope_pers Type var_expression SEMICOLON
  102                     | scope2 Type var_expression SEMICOLON

  103 variable_for_body: scope2 Type var_expression SEMICOLON
  104                  | scope2 Type Identifier ASS expression SEMICOLON
  105                  | scope2 Type array_index ASS expression SEMICOLON
  106                  | scope2 Type struct_index ASS expression SEMICOLON

  107 var_expression: Identifier
  108               | array_index
  109               | struct_index

  110 var_assignment: scope1 Type Identifier ASS expression SEMICOLON
  111               | scope2 Type Identifier ASS expression SEMICOLON
  112               | scope_pers Type Identifier ASS expression SEMICOLON
  113               | scope1 Type array_index ASS expression SEMICOLON
  114               | scope2 Type array_index ASS expression SEMICOLON
  115               | scope_pers Type array_index ASS expression SEMICOLON
  116               | scope1 Type struct_index ASS expression SEMICOLON
  117               | scope2 Type struct_index ASS expression SEMICOLON
  118               | scope_pers Type struct_index ASS expression SEMICOLON

  119 assignment: var_expression ASS expression SEMICOLON

  120 dim_num_stm: expression
  121            | dim_num_stm COMMA expression

  122 struct_index: var_expression DOT Identifier

  123 array_index: Identifier LBRACE expression RBRACE

  124 offs_expr: OFFS LC func_call_parameter_list RC

  125 reltool_expr: RELTOOl LC func_call_parameter_list RC

  126 op_expr: expression ADD expression
  127        | expression SUB expression
  128        | SUB expression
  129        | expression MUL expression
  130        | expression LT expression
  131        | expression GT expression
  132        | expression GE expression
  133        | expression LE expression
  134        | expression NE expression
  135        | expression EQ expression
  136        | expression AND expression
  137        | expression OR expression
  138        | expression MOD expression
  139        | expression ASS expression
  140        | NOT expression
  141        | LC expression RC

  142 inst_expr: inst_modifer
  143          | var_expression inst_modifer

  144 expression: LR dim_num_stm RR
  145           | RAPID_NAN
  146           | String
  147           | FNULL
  148           | Number
  149           | FTRUE
  150           | FFALSE
  151           | var_expression
  152           | op_expr
  153           | offs_expr
  154           | reltool_expr
  155           | inst_expr
  156           | Identifier LC func_call_parameter_list RC


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256)
    MINUS (258)
    DIVIDE (259)
    ELSE (260) 98
    PREFIX (261)
    GE (262) 132
    LE (263) 133
    EQ (264) 135
    NE (265) 134
    IF (266) 93 94 95
    ADD (267) 126
    SUB (268) 127 128
    MUL (269) 129
    LT (270) 130
    GT (271) 131
    RETURN (272) 85 86
    NumberType <ival> (273)
    TextType <ival> (274)
    VoidType <ival> (275)
    SPACE (276)
    THEN (277) 93 95 99
    JIN (278)
    DOLAR (279)
    RAPID_NAN (280) 145
    SEAMDATA (281) 20
    WELDDATA (282) 21
    INPOS (283) 53
    CONC (284) 45
    ENDFUNC (285) 32
    UMINUS (286)
    ACCSET (287) 75
    VELSET (288) 76
    SETDO (289) 78
    WAITDI (290) 81
    OFFS (291) 124
    FUNC (292) 32
    INOUT (293)
    RELTOOl (294) 125
    RECORD (295) 23
    ENDRECORD (296) 23
    PULSEDO (297) 83
    WAITTIME_INPOS (298)
    WOBJ_P (299) 50
    SEAM_NAME (300) 51
    ZONE_P (301) 52
    VEL_P (302) 54
    TCP_P (303) 55
    NOEOFFS (304) 56
    PLEN (305) 47
    DOT (306) 122
    MAXTIME (307) 48
    TIMEFLAG (308) 49
    TOOL_P (309) 46
    ID_P (310) 57
    ASS (311) 104 105 106 110 111 112 113 114 115 116 117 118 119 139
    LR (312) 144
    RR (313) 144
    COMMA (314) 34 38 75 76 78 81 121
    LC (315) 31 32 124 125 141 156
    RC (316) 31 32 124 125 141 156
    LESS (317)
    GREATER (318)
    COLON (319) 91
    FNULL (320) 147
    DEVCOLON (321)
    NOT (322) 140
    FTRUE (323) 149
    FFALSE (324) 150
    FOR (325) 92
    ENDFOR (326) 92
    TO (327) 92
    FROM (328) 92
    SEMICOLON (329) 26 43 44 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 85 86 100 101 102 103 104 105 106 110 111 112 113 114 115 116 117 118 119
    SPLASH (330) 45 46 47 48 49 50 51 52 53 54 55 56 57
    LBRACE (331) 123
    RBRACE (332) 123
    LMOVE (333)
    VAR (334) 30
    DO (335) 87 92
    WHILE (336) 87
    ENDWHILE (337) 87
    TEST (338) 88
    ENDTEST (339) 88
    RETRY (340)
    CASE (341) 91
    DEFAULT (342)
    JOINTTARGET (343) 15
    ROBTARGET (344) 14
    STRING (345) 13
    NUM (346) 11
    BOOL (347) 12
    WOBJDATA (348) 16
    ZONEDATA (349) 17
    SPEEDDATA (350) 18
    TOOLDATA (351) 19
    PERS (352) 27 28
    CONST_L (353) 29
    ACTUNIT <pNode> (354) 66
    MOVEABSJ <pNode> (355) 72
    ARCLSTART <pNode> (356) 67
    ARCL <pNode> (357) 68
    ARCC <pNode> (358) 69
    ARCEND <pNode> (359) 70
    MOVEL <pNode> (360) 71
    MOVEJ <pNode> (361) 65
    ENDMODULE (362) 4
    ENDPROC (363) 31
    MODULE (364) 4
    PROC (365) 31
    AND (366) 136
    OR (367) 137
    MOD (368) 138
    DEACTUNIT <pNode> (369) 73
    ELSEIF (370) 99
    WAITTIME (371) 77
    WAITUNTIL (372) 82
    SET (373) 79
    RESET (374) 80
    STEP (375) 92
    ARCCEND (376)
    ENDIF (377) 93 95
    TPWRITE (378) 74
    TASK (379) 28
    Number <dval> (380) 148
    LNumber <ival> (381)
    Identifier <sval> (382) 4 22 23 26 31 32 36 43 44 78 79 80 81 92 104 107 110 111 112 122 123 156
    String <sval> (383) 146


Nonterminals, with rules where they appear

    $accept (129)
        on left: 0
    program <pNode> (130)
        on left: 1
        on right: 0
    module_list <moduleListNode> (131)
        on left: 2 3
        on right: 1 3
    module <moduleNode> (132)
        on left: 4
        on right: 2 3
    declaration_list <listNode> (133)
        on left: 5 6
        on right: 4 6
    declaration <pNode> (134)
        on left: 7 8 9 10
        on right: 5 6
    Type <pNode> (135)
        on left: 11 12 13 14 15 16 17 18 19 20 21 22
        on right: 26 32 36 100 101 102 103 104 105 106 110 111 112 113 114 115 116 117 118
    Record_declare <pNode> (136)
        on left: 23
        on right: 10
    struct_members <listNode> (137)
        on left: 24 25
        on right: 23 25
    var_decl <pNode> (138)
        on left: 26
        on right: 24 25
    scope_pers <ival> (139)
        on left: 27
        on right: 101 112 115 118
    scope1 <ival> (140)
        on left: 28 29
        on right: 100 110 113 116
    scope2 <ival> (141)
        on left: 30
        on right: 102 103 104 105 106 111 114 117
    function_declaration <functionNode> (142)
        on left: 31 32
        on right: 8
    parameter_declaration_list <parameterListNode> (143)
        on left: 33 34 35
        on right: 31 32 34
    parameter_declaration <parameterNode> (144)
        on left: 36
        on right: 33 34
    func_call_parameter_list <listNode> (145)
        on left: 37 38
        on right: 38 44 65 66 67 68 69 70 71 72 73 77 83 124 125 156
    function_body <statementListNode> (146)
        on left: 39 40
        on right: 31 32 87 91 92 93 95 98 99
    statement_list <statementListNode> (147)
        on left: 41 42
        on right: 40 42
    function_call <pNode> (148)
        on left: 43 44
        on right: 64
    inst_modifer <pNode> (149)
        on left: 45 46 47 48 49 50 51 52 53 54 55 56 57
        on right: 142 143
    statement <pNode> (150)
        on left: 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84
        on right: 41 42 94
    return <pNode> (151)
        on left: 85 86
        on right: 63
    while_loop <pNode> (152)
        on left: 87
        on right: 61
    switch <pNode> (153)
        on left: 88
        on right: 84
    switch_case_list <listNode> (154)
        on left: 89 90
        on right: 88 90
    switch_case_define <pNode> (155)
        on left: 91
        on right: 89 90
    for <pNode> (156)
        on left: 92
        on right: 62
    if <pNode> (157)
        on left: 93 94 95
        on right: 60
    elseif_statment_list <elseifListNode> (158)
        on left: 96 97
        on right: 95 97
    elseif_statment <elseif_stmNode> (159)
        on left: 98 99
        on right: 96 97
    variable_declaration <variableNode> (160)
        on left: 100 101 102
        on right: 7
    variable_for_body <variableNode> (161)
        on left: 103 104 105 106
        on right: 58
    var_expression <pNode> (162)
        on left: 107 108 109
        on right: 100 101 102 103 119 122 143 151
    var_assignment <pNode> (163)
        on left: 110 111 112 113 114 115 116 117 118
        on right: 9
    assignment <pNode> (164)
        on left: 119
        on right: 59
    dim_num_stm <dim_num_stmNode> (165)
        on left: 120 121
        on right: 121 144
    struct_index <pNode> (166)
        on left: 122
        on right: 106 109 116 117 118
    array_index <pNode> (167)
        on left: 123
        on right: 105 108 113 114 115
    offs_expr <pNode> (168)
        on left: 124
        on right: 153
    reltool_expr <pNode> (169)
        on left: 125
        on right: 154
    op_expr <pNode> (170)
        on left: 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141
        on right: 152
    inst_expr <pNode> (171)
        on left: 142 143
        on right: 155
    expression <pNode> (172)
        on left: 144 145 146 147 148 149 150 151 152 153 154 155 156
        on right: 37 38 74 75 76 78 81 82 86 87 88 91 92 93 94 95 99 104 105 106 110 111 112 113 114 115 116 117 118 119 120 121 123 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141


State 0

    0 $accept: . program "end of file"

    MODULE  shift, and go to state 1

    program      go to state 2
    module_list  go to state 3
    module       go to state 4


State 1

    4 module: MODULE . Identifier declaration_list ENDMODULE

    Identifier  shift, and go to state 5


State 2

    0 $accept: program . "end of file"

    "end of file"  shift, and go to state 6


State 3

    1 program: module_list .
    3 module_list: module_list . module

    MODULE  shift, and go to state 1

    $default  reduce using rule 1 (program)

    module  go to state 7


State 4

    2 module_list: module .

    $default  reduce using rule 2 (module_list)


State 5

    4 module: MODULE Identifier . declaration_list ENDMODULE

    FUNC     shift, and go to state 8
    RECORD   shift, and go to state 9
    VAR      shift, and go to state 10
    PERS     shift, and go to state 11
    CONST_L  shift, and go to state 12
    PROC     shift, and go to state 13
    TASK     shift, and go to state 14

    declaration_list      go to state 15
    declaration           go to state 16
    Record_declare        go to state 17
    scope_pers            go to state 18
    scope1                go to state 19
    scope2                go to state 20
    function_declaration  go to state 21
    variable_declaration  go to state 22
    var_assignment        go to state 23


State 6

    0 $accept: program "end of file" .

    $default  accept


State 7

    3 module_list: module_list module .

    $default  reduce using rule 3 (module_list)


State 8

   32 function_declaration: FUNC . Type Identifier LC parameter_declaration_list RC function_body ENDFUNC

    SEAMDATA     shift, and go to state 24
    WELDDATA     shift, and go to state 25
    JOINTTARGET  shift, and go to state 26
    ROBTARGET    shift, and go to state 27
    STRING       shift, and go to state 28
    NUM          shift, and go to state 29
    BOOL         shift, and go to state 30
    WOBJDATA     shift, and go to state 31
    ZONEDATA     shift, and go to state 32
    SPEEDDATA    shift, and go to state 33
    TOOLDATA     shift, and go to state 34
    Identifier   shift, and go to state 35

    Type  go to state 36


State 9

   23 Record_declare: RECORD . Identifier struct_members ENDRECORD

    Identifier  shift, and go to state 37


State 10

   30 scope2: VAR .

    $default  reduce using rule 30 (scope2)


State 11

   27 scope_pers: PERS .

    $default  reduce using rule 27 (scope_pers)


State 12

   29 scope1: CONST_L .

    $default  reduce using rule 29 (scope1)


State 13

   31 function_declaration: PROC . Identifier LC parameter_declaration_list RC function_body ENDPROC

    Identifier  shift, and go to state 38


State 14

   28 scope1: TASK . PERS

    PERS  shift, and go to state 39


State 15

    4 module: MODULE Identifier declaration_list . ENDMODULE
    6 declaration_list: declaration_list . declaration

    FUNC       shift, and go to state 8
    RECORD     shift, and go to state 9
    VAR        shift, and go to state 10
    PERS       shift, and go to state 11
    CONST_L    shift, and go to state 12
    ENDMODULE  shift, and go to state 40
    PROC       shift, and go to state 13
    TASK       shift, and go to state 14

    declaration           go to state 41
    Record_declare        go to state 17
    scope_pers            go to state 18
    scope1                go to state 19
    scope2                go to state 20
    function_declaration  go to state 21
    variable_declaration  go to state 22
    var_assignment        go to state 23


State 16

    5 declaration_list: declaration .

    $default  reduce using rule 5 (declaration_list)


State 17

   10 declaration: Record_declare .

    $default  reduce using rule 10 (declaration)


State 18

  101 variable_declaration: scope_pers . Type var_expression SEMICOLON
  112 var_assignment: scope_pers . Type Identifier ASS expression SEMICOLON
  115               | scope_pers . Type array_index ASS expression SEMICOLON
  118               | scope_pers . Type struct_index ASS expression SEMICOLON

    SEAMDATA     shift, and go to state 24
    WELDDATA     shift, and go to state 25
    JOINTTARGET  shift, and go to state 26
    ROBTARGET    shift, and go to state 27
    STRING       shift, and go to state 28
    NUM          shift, and go to state 29
    BOOL         shift, and go to state 30
    WOBJDATA     shift, and go to state 31
    ZONEDATA     shift, and go to state 32
    SPEEDDATA    shift, and go to state 33
    TOOLDATA     shift, and go to state 34
    Identifier   shift, and go to state 35

    Type  go to state 42


State 19

  100 variable_declaration: scope1 . Type var_expression SEMICOLON
  110 var_assignment: scope1 . Type Identifier ASS expression SEMICOLON
  113               | scope1 . Type array_index ASS expression SEMICOLON
  116               | scope1 . Type struct_index ASS expression SEMICOLON

    SEAMDATA     shift, and go to state 24
    WELDDATA     shift, and go to state 25
    JOINTTARGET  shift, and go to state 26
    ROBTARGET    shift, and go to state 27
    STRING       shift, and go to state 28
    NUM          shift, and go to state 29
    BOOL         shift, and go to state 30
    WOBJDATA     shift, and go to state 31
    ZONEDATA     shift, and go to state 32
    SPEEDDATA    shift, and go to state 33
    TOOLDATA     shift, and go to state 34
    Identifier   shift, and go to state 35

    Type  go to state 43


State 20

  102 variable_declaration: scope2 . Type var_expression SEMICOLON
  111 var_assignment: scope2 . Type Identifier ASS expression SEMICOLON
  114               | scope2 . Type array_index ASS expression SEMICOLON
  117               | scope2 . Type struct_index ASS expression SEMICOLON

    SEAMDATA     shift, and go to state 24
    WELDDATA     shift, and go to state 25
    JOINTTARGET  shift, and go to state 26
    ROBTARGET    shift, and go to state 27
    STRING       shift, and go to state 28
    NUM          shift, and go to state 29
    BOOL         shift, and go to state 30
    WOBJDATA     shift, and go to state 31
    ZONEDATA     shift, and go to state 32
    SPEEDDATA    shift, and go to state 33
    TOOLDATA     shift, and go to state 34
    Identifier   shift, and go to state 35

    Type  go to state 44


State 21

    8 declaration: function_declaration .

    $default  reduce using rule 8 (declaration)


State 22

    7 declaration: variable_declaration .

    $default  reduce using rule 7 (declaration)


State 23

    9 declaration: var_assignment .

    $default  reduce using rule 9 (declaration)


State 24

   20 Type: SEAMDATA .

    $default  reduce using rule 20 (Type)


State 25

   21 Type: WELDDATA .

    $default  reduce using rule 21 (Type)


State 26

   15 Type: JOINTTARGET .

    $default  reduce using rule 15 (Type)


State 27

   14 Type: ROBTARGET .

    $default  reduce using rule 14 (Type)


State 28

   13 Type: STRING .

    $default  reduce using rule 13 (Type)


State 29

   11 Type: NUM .

    $default  reduce using rule 11 (Type)


State 30

   12 Type: BOOL .

    $default  reduce using rule 12 (Type)


State 31

   16 Type: WOBJDATA .

    $default  reduce using rule 16 (Type)


State 32

   17 Type: ZONEDATA .

    $default  reduce using rule 17 (Type)


State 33

   18 Type: SPEEDDATA .

    $default  reduce using rule 18 (Type)


State 34

   19 Type: TOOLDATA .

    $default  reduce using rule 19 (Type)


State 35

   22 Type: Identifier .

    $default  reduce using rule 22 (Type)


State 36

   32 function_declaration: FUNC Type . Identifier LC parameter_declaration_list RC function_body ENDFUNC

    Identifier  shift, and go to state 45


State 37

   23 Record_declare: RECORD Identifier . struct_members ENDRECORD

    SEAMDATA     shift, and go to state 24
    WELDDATA     shift, and go to state 25
    JOINTTARGET  shift, and go to state 26
    ROBTARGET    shift, and go to state 27
    STRING       shift, and go to state 28
    NUM          shift, and go to state 29
    BOOL         shift, and go to state 30
    WOBJDATA     shift, and go to state 31
    ZONEDATA     shift, and go to state 32
    SPEEDDATA    shift, and go to state 33
    TOOLDATA     shift, and go to state 34
    Identifier   shift, and go to state 35

    Type            go to state 46
    struct_members  go to state 47
    var_decl        go to state 48


State 38

   31 function_declaration: PROC Identifier . LC parameter_declaration_list RC function_body ENDPROC

    LC  shift, and go to state 49


State 39

   28 scope1: TASK PERS .

    $default  reduce using rule 28 (scope1)


State 40

    4 module: MODULE Identifier declaration_list ENDMODULE .

    $default  reduce using rule 4 (module)


State 41

    6 declaration_list: declaration_list declaration .

    $default  reduce using rule 6 (declaration_list)


State 42

  101 variable_declaration: scope_pers Type . var_expression SEMICOLON
  112 var_assignment: scope_pers Type . Identifier ASS expression SEMICOLON
  115               | scope_pers Type . array_index ASS expression SEMICOLON
  118               | scope_pers Type . struct_index ASS expression SEMICOLON

    Identifier  shift, and go to state 50

    var_expression  go to state 51
    struct_index    go to state 52
    array_index     go to state 53


State 43

  100 variable_declaration: scope1 Type . var_expression SEMICOLON
  110 var_assignment: scope1 Type . Identifier ASS expression SEMICOLON
  113               | scope1 Type . array_index ASS expression SEMICOLON
  116               | scope1 Type . struct_index ASS expression SEMICOLON

    Identifier  shift, and go to state 54

    var_expression  go to state 55
    struct_index    go to state 56
    array_index     go to state 57


State 44

  102 variable_declaration: scope2 Type . var_expression SEMICOLON
  111 var_assignment: scope2 Type . Identifier ASS expression SEMICOLON
  114               | scope2 Type . array_index ASS expression SEMICOLON
  117               | scope2 Type . struct_index ASS expression SEMICOLON

    Identifier  shift, and go to state 58

    var_expression  go to state 59
    struct_index    go to state 60
    array_index     go to state 61


State 45

   32 function_declaration: FUNC Type Identifier . LC parameter_declaration_list RC function_body ENDFUNC

    LC  shift, and go to state 62


State 46

   26 var_decl: Type . Identifier SEMICOLON

    Identifier  shift, and go to state 63


State 47

   23 Record_declare: RECORD Identifier struct_members . ENDRECORD
   25 struct_members: struct_members . var_decl

    SEAMDATA     shift, and go to state 24
    WELDDATA     shift, and go to state 25
    ENDRECORD    shift, and go to state 64
    JOINTTARGET  shift, and go to state 26
    ROBTARGET    shift, and go to state 27
    STRING       shift, and go to state 28
    NUM          shift, and go to state 29
    BOOL         shift, and go to state 30
    WOBJDATA     shift, and go to state 31
    ZONEDATA     shift, and go to state 32
    SPEEDDATA    shift, and go to state 33
    TOOLDATA     shift, and go to state 34
    Identifier   shift, and go to state 35

    Type      go to state 46
    var_decl  go to state 65


State 48

   24 struct_members: var_decl .

    $default  reduce using rule 24 (struct_members)


State 49

   31 function_declaration: PROC Identifier LC . parameter_declaration_list RC function_body ENDPROC

    SEAMDATA     shift, and go to state 24
    WELDDATA     shift, and go to state 25
    JOINTTARGET  shift, and go to state 26
    ROBTARGET    shift, and go to state 27
    STRING       shift, and go to state 28
    NUM          shift, and go to state 29
    BOOL         shift, and go to state 30
    WOBJDATA     shift, and go to state 31
    ZONEDATA     shift, and go to state 32
    SPEEDDATA    shift, and go to state 33
    TOOLDATA     shift, and go to state 34
    Identifier   shift, and go to state 35

    $default  reduce using rule 35 (parameter_declaration_list)

    Type                        go to state 66
    parameter_declaration_list  go to state 67
    parameter_declaration       go to state 68


State 50

  107 var_expression: Identifier .
  112 var_assignment: scope_pers Type Identifier . ASS expression SEMICOLON
  123 array_index: Identifier . LBRACE expression RBRACE

    ASS     shift, and go to state 69
    LBRACE  shift, and go to state 70

    $default  reduce using rule 107 (var_expression)


State 51

  101 variable_declaration: scope_pers Type var_expression . SEMICOLON
  122 struct_index: var_expression . DOT Identifier

    DOT        shift, and go to state 71
    SEMICOLON  shift, and go to state 72


State 52

  109 var_expression: struct_index .
  118 var_assignment: scope_pers Type struct_index . ASS expression SEMICOLON

    ASS  shift, and go to state 73

    $default  reduce using rule 109 (var_expression)


State 53

  108 var_expression: array_index .
  115 var_assignment: scope_pers Type array_index . ASS expression SEMICOLON

    ASS  shift, and go to state 74

    $default  reduce using rule 108 (var_expression)


State 54

  107 var_expression: Identifier .
  110 var_assignment: scope1 Type Identifier . ASS expression SEMICOLON
  123 array_index: Identifier . LBRACE expression RBRACE

    ASS     shift, and go to state 75
    LBRACE  shift, and go to state 70

    $default  reduce using rule 107 (var_expression)


State 55

  100 variable_declaration: scope1 Type var_expression . SEMICOLON
  122 struct_index: var_expression . DOT Identifier

    DOT        shift, and go to state 71
    SEMICOLON  shift, and go to state 76


State 56

  109 var_expression: struct_index .
  116 var_assignment: scope1 Type struct_index . ASS expression SEMICOLON

    ASS  shift, and go to state 77

    $default  reduce using rule 109 (var_expression)


State 57

  108 var_expression: array_index .
  113 var_assignment: scope1 Type array_index . ASS expression SEMICOLON

    ASS  shift, and go to state 78

    $default  reduce using rule 108 (var_expression)


State 58

  107 var_expression: Identifier .
  111 var_assignment: scope2 Type Identifier . ASS expression SEMICOLON
  123 array_index: Identifier . LBRACE expression RBRACE

    ASS     shift, and go to state 79
    LBRACE  shift, and go to state 70

    $default  reduce using rule 107 (var_expression)


State 59

  102 variable_declaration: scope2 Type var_expression . SEMICOLON
  122 struct_index: var_expression . DOT Identifier

    DOT        shift, and go to state 71
    SEMICOLON  shift, and go to state 80


State 60

  109 var_expression: struct_index .
  117 var_assignment: scope2 Type struct_index . ASS expression SEMICOLON

    ASS  shift, and go to state 81

    $default  reduce using rule 109 (var_expression)


State 61

  108 var_expression: array_index .
  114 var_assignment: scope2 Type array_index . ASS expression SEMICOLON

    ASS  shift, and go to state 82

    $default  reduce using rule 108 (var_expression)


State 62

   32 function_declaration: FUNC Type Identifier LC . parameter_declaration_list RC function_body ENDFUNC

    SEAMDATA     shift, and go to state 24
    WELDDATA     shift, and go to state 25
    JOINTTARGET  shift, and go to state 26
    ROBTARGET    shift, and go to state 27
    STRING       shift, and go to state 28
    NUM          shift, and go to state 29
    BOOL         shift, and go to state 30
    WOBJDATA     shift, and go to state 31
    ZONEDATA     shift, and go to state 32
    SPEEDDATA    shift, and go to state 33
    TOOLDATA     shift, and go to state 34
    Identifier   shift, and go to state 35

    $default  reduce using rule 35 (parameter_declaration_list)

    Type                        go to state 66
    parameter_declaration_list  go to state 83
    parameter_declaration       go to state 68


State 63

   26 var_decl: Type Identifier . SEMICOLON

    SEMICOLON  shift, and go to state 84


State 64

   23 Record_declare: RECORD Identifier struct_members ENDRECORD .

    $default  reduce using rule 23 (Record_declare)


State 65

   25 struct_members: struct_members var_decl .

    $default  reduce using rule 25 (struct_members)


State 66

   36 parameter_declaration: Type . Identifier

    Identifier  shift, and go to state 85


State 67

   31 function_declaration: PROC Identifier LC parameter_declaration_list . RC function_body ENDPROC
   34 parameter_declaration_list: parameter_declaration_list . COMMA parameter_declaration

    COMMA  shift, and go to state 86
    RC     shift, and go to state 87


State 68

   33 parameter_declaration_list: parameter_declaration .

    $default  reduce using rule 33 (parameter_declaration_list)


State 69

  112 var_assignment: scope_pers Type Identifier ASS . expression SEMICOLON

    SUB         shift, and go to state 88
    RAPID_NAN   shift, and go to state 89
    OFFS        shift, and go to state 90
    RELTOOl     shift, and go to state 91
    LR          shift, and go to state 92
    LC          shift, and go to state 93
    FNULL       shift, and go to state 94
    NOT         shift, and go to state 95
    FTRUE       shift, and go to state 96
    FFALSE      shift, and go to state 97
    SPLASH      shift, and go to state 98
    Number      shift, and go to state 99
    Identifier  shift, and go to state 100
    String      shift, and go to state 101

    inst_modifer    go to state 102
    var_expression  go to state 103
    struct_index    go to state 104
    array_index     go to state 105
    offs_expr       go to state 106
    reltool_expr    go to state 107
    op_expr         go to state 108
    inst_expr       go to state 109
    expression      go to state 110


State 70

  123 array_index: Identifier LBRACE . expression RBRACE

    SUB         shift, and go to state 88
    RAPID_NAN   shift, and go to state 89
    OFFS        shift, and go to state 90
    RELTOOl     shift, and go to state 91
    LR          shift, and go to state 92
    LC          shift, and go to state 93
    FNULL       shift, and go to state 94
    NOT         shift, and go to state 95
    FTRUE       shift, and go to state 96
    FFALSE      shift, and go to state 97
    SPLASH      shift, and go to state 98
    Number      shift, and go to state 99
    Identifier  shift, and go to state 100
    String      shift, and go to state 101

    inst_modifer    go to state 102
    var_expression  go to state 103
    struct_index    go to state 104
    array_index     go to state 105
    offs_expr       go to state 106
    reltool_expr    go to state 107
    op_expr         go to state 108
    inst_expr       go to state 109
    expression      go to state 111


State 71

  122 struct_index: var_expression DOT . Identifier

    Identifier  shift, and go to state 112


State 72

  101 variable_declaration: scope_pers Type var_expression SEMICOLON .

    $default  reduce using rule 101 (variable_declaration)


State 73

  118 var_assignment: scope_pers Type struct_index ASS . expression SEMICOLON

    SUB         shift, and go to state 88
    RAPID_NAN   shift, and go to state 89
    OFFS        shift, and go to state 90
    RELTOOl     shift, and go to state 91
    LR          shift, and go to state 92
    LC          shift, and go to state 93
    FNULL       shift, and go to state 94
    NOT         shift, and go to state 95
    FTRUE       shift, and go to state 96
    FFALSE      shift, and go to state 97
    SPLASH      shift, and go to state 98
    Number      shift, and go to state 99
    Identifier  shift, and go to state 100
    String      shift, and go to state 101

    inst_modifer    go to state 102
    var_expression  go to state 103
    struct_index    go to state 104
    array_index     go to state 105
    offs_expr       go to state 106
    reltool_expr    go to state 107
    op_expr         go to state 108
    inst_expr       go to state 109
    expression      go to state 113


State 74

  115 var_assignment: scope_pers Type array_index ASS . expression SEMICOLON

    SUB         shift, and go to state 88
    RAPID_NAN   shift, and go to state 89
    OFFS        shift, and go to state 90
    RELTOOl     shift, and go to state 91
    LR          shift, and go to state 92
    LC          shift, and go to state 93
    FNULL       shift, and go to state 94
    NOT         shift, and go to state 95
    FTRUE       shift, and go to state 96
    FFALSE      shift, and go to state 97
    SPLASH      shift, and go to state 98
    Number      shift, and go to state 99
    Identifier  shift, and go to state 100
    String      shift, and go to state 101

    inst_modifer    go to state 102
    var_expression  go to state 103
    struct_index    go to state 104
    array_index     go to state 105
    offs_expr       go to state 106
    reltool_expr    go to state 107
    op_expr         go to state 108
    inst_expr       go to state 109
    expression      go to state 114


State 75

  110 var_assignment: scope1 Type Identifier ASS . expression SEMICOLON
